added color change

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <!-- create/edit note popup -->
-    <div class="create-note__background hide" id="new-note-popup">
-        <form class="create-note__window">
+    <div class="create-note__background hide" id="create-note__background">
+        <form class="create-note__window" id="create-note__window">
             <input class="create-note__title" id="create-note__title" type="text" name="title" placeholder="Title...">
             <input class="create-note__content" id="create-note__content" type="text" name="title" placeholder="Your note...">
             <button type="button" class="create-note__cancel">X</bu>
@@ -37,11 +37,7 @@
 
         <h3 class="heading-3">Pinned</h3>
         <div class="notes notes--pinned" id="pinned">
-            <!-- <div class="notes__note">
-                <h2 class="heading-2">Note title</h2>
-                <p class="notes__note__date">25.01.2019</p>
-                <p class="notes__note__content">This is a content of a note.</p>
-            </div> -->
+            <!-- notes here -->
         </div>
 
         <!-- <h3 class="heading-3 notes__title">Others</h3> -->
