include editing notes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="date" name="create-note__notification" id="create-note__notification">
             </div>
            
-            <button type="button" class="create-note__confirm" id="create-note__confirm">Add</button>
+            <button type="button" class="create-note__confirm" id="create-note__confirm">OK</button>
         </form>
     </div>
 
