enable removing notes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <!-- create/edit note popup -->
     <div class="create-note__background hide" id="create-note__background">
         <form class="create-note__window" id="create-note__window">
+            <button type="button" class="create-note__remove" id="create-note__remove"></button>
+            <button type="button" class="create-note__cancel" id="create-note__cancel"></button>
             <input class="create-note__title" id="create-note__title" type="text" name="title" placeholder="Title...">
             <textarea class="create-note__content" id="create-note__content" rows="10" name="title" placeholder="Your note..."></textarea>
-            <button type="button" class="create-note__cancel"></button>
             <div class="create-note__input-container">
                 <label for="create-note__pin">Pin</label>
                 <input type="checkbox" name="create-note__pin" id="create-note__pin">
