hide/show pinned/others note container's  titles

--- a/index.html
+++ b/index.html
@@ -45,16 +45,12 @@
     <main class="main">
         <button class="create-note-btn" id="create-note-btn">Create a new note</button>
 
-        <h3 class="heading-3">Pinned</h3>
-        <div class="notes notes--pinned" id="pinned">
-            <!-- notes here -->
-        </div>
+        <h3 class="heading-3 notes--pinned__title">Pinned</h3>
+        <div class="notes notes--pinned" id="pinned"></div>
 
         <!-- <h3 class="heading-3 notes__title">Others</h3> -->
-        <h3 class="heading-3">Others</h3>
-        <div class="notes notes--other" id="other">
-            <!-- notes here -->
-        </div>
+        <h3 class="heading-3 notes--others__title">Others</h3>
+        <div class="notes notes--other" id="others"></div>
     </main>
 
     <footer class="footer">&copy; Ł. Uczkiewicz 2019</footer>
